Fix high contrast mode on radio / checkboxes

--- a/src/components/RadioButton/RadioButton.scss
+++ b/src/components/RadioButton/RadioButton.scss
@@ -103,10 +103,10 @@
       border-radius: 50%;
       transition: opacity var(--p-duration-1-0-0) var(--p-ease),
         transform var(--p-duration-1-0-0) var(--p-ease);
-    }
 
-    @media (-ms-high-contrast: active) {
-      background: ms-high-contrast-color('text');
+      @media (-ms-high-contrast: active) {
+        border: rem(5px) solid ms-high-contrast-color('text');
+      }
     }
 
     @include focus-ring($border-width: var(--p-control-border-width));
