--- a/src/styles/shared/_controls.scss
+++ b/src/styles/shared/_controls.scss
@@ -130,6 +130,9 @@
       &::before {
         opacity: 1;
         transform: scale(1);
+        @media (-ms-high-contrast: active) {
+          border: 2px solid ms-high-contrast-color('text');
+        }
       }
     } @else if $style == disabled {
       border-color: var(--p-border-secondary-disabled);
